[metadata]
name = sentry_telegram
version = 24.2.0
author = voco
author_email = vocolboy@gmail.com
description = Plugin for Sentry which allows sending notification via Telegram messenger.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/tianci-sh/sentry-telegram

[options.entry_points]
sentry.plugins =
    telegram = sentry_telegram.plugin:TelegramPlugin

[options]
packages = find:
include_package_data = True